--- a/Test/main.css
+++ b/Test/main.css
@@ -297,10 +297,10 @@ div.message > div.msg > div.from > span.un {
 
 /*-*/
 
-.id-3941421 .msg .from i.icon-chat-manager,
-#waitlist .list .user[data-uid="3941421"] .meta.is-staff .name .icon-chat-manager,
-#user-rollover.id-3941421 .info .role i.icon-chat-manager,
-#user-lists .list.room .user.id-3941421 .icon-chat-manager {
+.id-3941421 .msg .from i.icon-chat-bouncer,
+#waitlist .list .user[data-uid="3941421"] .meta.is-staff .name .icon-chat-bouncer,
+#user-rollover.id-3941421 .info .role i.icon-chat-bouncer,
+#user-lists .list.room .user.id-3941421 .icon-chat-bouncer {
     background: url("https://i.imgur.com/bJO8p2A.png") no-repeat !important;
 }
 
@@ -308,10 +308,10 @@ div.message > div.msg > div.from > span.un {
     border-color: #90b0cf !important;
 }
 
-.id-3941421 .msg .from.manager .un,
+.id-3941421 .msg .from.bouncer .un,
 .id-3941421 .from .un,
 #chat [data-cid^="3941421-"] span.un.clickable,
-#waitlist .list .user[data-uid="3941421"] .meta.is-staff .name .icon-chat-manager + span,
+#waitlist .list .user[data-uid="3941421"] .meta.is-staff .name .icon-chat-bouncer + span,
 #user-rollover.id-3941421 .info .role span,
 #user-rollover.id-3941421 .meta .username,
 #user-lists .list.room .user.id-3941421 .name {
